// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateChain: index mapStateToProps with default state 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {
      "2327839d6c7fc1188085554193cf578537ee660d": Object {
        "error": null,
      },
    },
    "Admin_1085_64667": Object {
      "d2263b71c14010ff03d8f786670aba691b22b158": Object {
        "error": null,
      },
    },
    "Admin_1177_31203": Object {
      "d46ade1b4fb6360fad2d05efd5d6d9fb51849320": Object {
        "error": null,
      },
    },
    "Admin_1177_39206": Object {
      "b80c7ad40cd178479d480e7136d93f2302692e4d": Object {
        "error": null,
      },
    },
    "Admin_1177_49507": Object {
      "0bdd9ade6477ba753650cc5d9ce40a17c42246c1": Object {
        "error": null,
      },
    },
    "Admin_1301_62816": Object {
      "45b53a8b688c3a3faca30e5842800922f80fdb8d": Object {
        "error": null,
      },
      "60122a032bebcb89e228899b60c4d190b5a17aa3": Object {
        "error": null,
      },
    },
    "Admin_1301_86023": Object {
      "585b8e9f36f43f38d9118b8750a5e6cd753e382e": Object {
        "error": null,
      },
    },
    "Buyer1": Object {
      "044eda43ba9c76fc36b9183c96f7a8fad8d21fe6": Object {
        "error": null,
      },
    },
    "Buyer1177_18955": Object {
      "73ea1c503b915e28162374591670904732d0e729": Object {
        "error": null,
      },
    },
    "Buyer2": Object {
      "ae5bfd0fc750d1d99e28e733bdac933dac826a4f": Object {
        "error": null,
      },
    },
    "Supplier0_1301_46441": Object {
      "error": "error",
    },
    "Supplier1": Object {
      "370adf114257cb0e0025eedf0a96261b51af23e3": Object {
        "error": null,
      },
    },
    "Supplier1177_62701": Object {
      "21edfc77121d05aba26955b6cd435bd8f864ad78": Object {
        "error": null,
      },
    },
    "Supplier1_1301_46441": Object {
      "0ca4a9bb1b37e6d63d142722e7c37bbf8f959547": Object {
        "error": null,
      },
    },
    "Supplier2": Object {
      "bc7199468816b3b92e54828affa08a010e9adb02": Object {
        "error": null,
      },
    },
    "Supplier2_1301_46441": Object {
      "57f2ed9058d2e868d7bbae9db03af12d27675117": Object {
        "error": null,
      },
    },
    "User_1177_14462": Object {
      "cd0046de8051af7e2781b58e892b25467133276f": Object {
        "error": null,
      },
    },
    "User_1177_26292": Object {
      "dcbdac4d738461fcf11669b73668211371839c76": Object {
        "error": null,
      },
    },
    "User_1177_37717": Object {
      "9677e59a2de0a2e2f712e1d76720857066a396b9": Object {
        "error": null,
      },
    },
    "User_1177_42489": Object {
      "a421b5e3c34118266745dd8426a80b35513b2277": Object {
        "error": null,
      },
    },
    "User_1177_52307": Object {
      "0e29350e6de10d60e58ffc2a7ad84401af5f2f29": Object {
        "error": null,
      },
    },
    "User_1177_59359": Object {
      "cf7a807b9bbb64cab5f988bddb4bedfd066a83de": Object {
        "error": null,
      },
    },
    "User_1177_59578": Object {
      "620083a3803fc8a5ad71e403c1a72a0e73ece645": Object {
        "error": null,
      },
      "dcbfca1d9a80d2d78fa6f74d62489a8ff4bd9c5f": Object {
        "error": null,
      },
    },
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {
      "33c02a81e677ea493aace735f0a6b44cfa18f44e": Object {
        "error": null,
      },
    },
  },
  "initialValues": Object {
    "from": "Supplier2_1301_46441",
    "fromAddress": "57f2ed9058d2e868d7bbae9db03af12d27675117",
  },
  "isOpen": true,
}
`;

exports[`CreateChain: index render component (enterprise mode) errorMessageFor 1`] = `null`;

exports[`CreateChain: index render component (enterprise mode) errorMessageFor 2`] = `"required"`;

exports[`CreateChain: index render component (enterprise mode) form fields 1`] = `
Object {
  "address": null,
  "balance": 0,
  "enode": null,
  "errors": null,
  "form": Object {
    "userSelected": true,
  },
  "username": null,
}
`;

exports[`CreateChain: index render component (enterprise mode) form fields 2`] = `
Object {
  "address": "370adf114257cb0e0025eedf0a96261b51af23e3",
  "balance": "500",
  "enode": "enode://",
  "errors": null,
  "form": Object {
    "userSelected": true,
  },
  "username": "Supplier1",
}
`;

exports[`CreateChain: index render component (enterprise mode) with empty values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add Member\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add Member\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Username
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"pt-select\\">
              <Field className=\\"pt-input\\" component=\\"select\\" name=\\"from\\" value={{...}} onChange={[Function: onChange]} required={true} disabled={false}>
                <option />
                <option value=\\"length\\">
                  length
                </option>
              </Field>
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Address
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"pt-select\\">
              <Field className=\\"pt-input\\" component=\\"select\\" name=\\"fromAddress\\" value={{...}} onChange={[Function: onChange]} required={true} disabled={false}>
                <option value={{...}} />
              </Field>
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Enode
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"enode\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Enode\\" value={{...}} className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Balance
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"value\\" component=\\"input\\" type=\\"number\\" placeholder=\\"Balance\\" value={0} className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add Member\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`CreateChain: index render component (enterprise mode) with values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add Member\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add Member\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Username
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"pt-select\\">
              <Field className=\\"pt-input\\" component=\\"select\\" name=\\"from\\" value={{...}} onChange={[Function: onChange]} required={true} disabled={false}>
                <option />
                <option value=\\"Admin_1085_64667\\">
                  Admin_1085_64667
                </option>
                <option value=\\"Supplier1\\">
                  Supplier1
                </option>
                <option value=\\"Supplier2\\">
                  Supplier2
                </option>
                <option value=\\"Buyer1\\">
                  Buyer1
                </option>
                <option value=\\"Buyer2\\">
                  Buyer2
                </option>
                <option value=\\"Admin_1177_49507\\">
                  Admin_1177_49507
                </option>
                <option value=\\"Admin_1177_39206\\">
                  Admin_1177_39206
                </option>
                <option value=\\"Admin_1177_31203\\">
                  Admin_1177_31203
                </option>
                <option value=\\"User_1177_14462\\">
                  User_1177_14462
                </option>
                <option value=\\"123456789012345678901234567890123\\">
                  123456789012345678901234567890123
                </option>
                <option value=\\"User_1177_26292\\">
                  User_1177_26292
                </option>
                <option value=\\"User_1177_69645 ?#%!@*\\">
                  User_1177_69645 ?#%!@*
                </option>
                <option value=\\"User_1177_59578\\">
                  User_1177_59578
                </option>
                <option value=\\"User_1177_79118\\">
                  User_1177_79118
                </option>
                <option value=\\"User_1177_59359\\">
                  User_1177_59359
                </option>
                <option value=\\"User_1177_42489\\">
                  User_1177_42489
                </option>
                <option value=\\"User_1177_37717\\">
                  User_1177_37717
                </option>
                <option value=\\"User_1177_52307\\">
                  User_1177_52307
                </option>
                <option value=\\"Buyer1177_18955\\">
                  Buyer1177_18955
                </option>
                <option value=\\"Supplier1177_62701\\">
                  Supplier1177_62701
                </option>
                <option value=\\"Admin_1301_86023\\">
                  Admin_1301_86023
                </option>
                <option value=\\"Admin_1301_62816\\">
                  Admin_1301_62816
                </option>
                <option value=\\"Supplier0_1301_46441\\">
                  Supplier0_1301_46441
                </option>
                <option value=\\"Supplier1_1301_46441\\">
                  Supplier1_1301_46441
                </option>
                <option value=\\"Supplier2_1301_46441\\">
                  Supplier2_1301_46441
                </option>
              </Field>
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Address
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"pt-select\\">
              <Field className=\\"pt-input\\" component=\\"select\\" name=\\"fromAddress\\" value={{...}} onChange={[Function: onChange]} required={true} disabled={false}>
                <option value={{...}} />
              </Field>
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Enode
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"enode\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Enode\\" value={{...}} className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Balance
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"value\\" component=\\"input\\" type=\\"number\\" placeholder=\\"Balance\\" value={0} className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add Member\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`CreateChain: index render component (public mode) form fields with values 1`] = `
Object {
  "address": null,
  "balance": 0,
  "enode": null,
  "errors": null,
  "form": Object {
    "userSelected": true,
  },
  "username": null,
}
`;

exports[`CreateChain: index render component (public mode) form fields with values 2`] = `
Object {
  "address": null,
  "balance": "500",
  "enode": "enode://",
  "errors": null,
  "form": Object {
    "userSelected": true,
  },
  "username": null,
}
`;

exports[`CreateChain: index render component (public mode) with empty values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add Member\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add Member\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Username
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"pt-select\\">
              <Field className=\\"pt-input\\" component=\\"select\\" name=\\"from\\" value={{...}} onChange={[Function: onChange]} required={true} disabled={true}>
                <option value={[undefined]} />
              </Field>
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Address
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"pt-select\\">
              <Field className=\\"pt-input\\" component=\\"select\\" name=\\"fromAddress\\" value={{...}} onChange={[Function: onChange]} required={true} disabled={true}>
                <option value={{...}} />
              </Field>
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Enode
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"enode\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Enode\\" value={{...}} className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Balance
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"value\\" component=\\"input\\" type=\\"number\\" placeholder=\\"Balance\\" value={0} className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add Member\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`CreateChain: index render component (public mode) with values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add Member\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add Member\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Username
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"pt-select\\">
              <Field className=\\"pt-input\\" component=\\"select\\" name=\\"from\\" value={{...}} onChange={[Function: onChange]} required={true} disabled={true}>
                <option value=\\"Supplier1\\">
                  Supplier1
                </option>
              </Field>
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Address
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"pt-select\\">
              <Field className=\\"pt-input\\" component=\\"select\\" name=\\"fromAddress\\" value={{...}} onChange={[Function: onChange]} required={true} disabled={true}>
                <option value=\\"370adf114257cb0e0025eedf0a96261b51af23e3\\">
                  370adf114257cb0e0025eedf0a96261b51af23e3
                </option>
              </Field>
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Enode
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"enode\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Enode\\" value={{...}} className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Balance
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"value\\" component=\\"input\\" type=\\"number\\" placeholder=\\"Balance\\" value={0} className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add Member\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;
